--- a/Train/configuration/tegn.yaml
+++ b/Train/configuration/tegn.yaml
@@ -19,7 +19,7 @@ BatchNormOptions:
 
 LossOptions:
   energy_loss_weight: .00
-  q_min: .2
+  q_min: 2.0
   use_average_cc_pos: 0.99999
   classification_loss_weight: 0.0
   too_much_beta_scale: 0.0
@@ -30,7 +30,7 @@ LossOptions:
 
 Training:
   - stage_1:
-    batch_size: 70000
+    batch_size: 170000
     learning_rate: 0.001
     epochs: 4
 
